# Pacman

pacman_sfml/: CMakeLists.txt  CMakePresets.json  README.md  gen_atlas.py  vcpkg.json
pacman_sfml/assets/maps/: fallback.txt  level1.txt
pacman_sfml/assets/sprites/: atlas.json
pacman_sfml/src/: AudioManager.cpp  AudioManager.h  BitmapFont.cpp  BitmapFont.h  Direction.h  Game.cpp  Game.h  Ghost.cpp  Ghost.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  SpriteAtlas.cpp  SpriteAtlas.h  Types.h  main.cpp
